--- a/src/app/pages/recipe/detailrecipe/detailrecipe.component.html
+++ b/src/app/pages/recipe/detailrecipe/detailrecipe.component.html
@@ -14,8 +14,8 @@
         
         <tr>
                   <th colspan="12" style="text-align: center;">{{ recipe.name }}</th>
-                  <td>{{ recipe.ratio | number:'1.2-2' }}%</td>
-                  <td>{{ recipe.stock |  number : '.1-5'}} KG</td>
+                  <td>{{ (recipe.ratio-1)*100 | number:'1.0-0' }}%</td>
+                  <td>{{ recipe.stock |  number : '.1-3'}} KG</td>
                   <td [class]="recipe.principaleRecipe ? 'text-green-500' : 'text-red-500'">{{ recipe.principaleRecipe ? 'OUI' : 'NON' }}</td>
                 
                   <!--<td class="highlight">{{ rec.quantity/1000 - getQuantite(plat.id) }} KG</td>-->
@@ -31,12 +31,16 @@
     
          <tr *ngFor="let detail of detailRecipe2">
              <th colspan="12" style="text-align: center;">{{ detail?.ingredient?.name }}</th>
-             <td>{{ detail?.proportion }} %</td>
+             <td>
+                <span *ngIf="detail?.proportion != null">
+                  {{ detail.proportion * 100 | number: '1.0-2' }} %
+                </span>
+             </td>
              <td>{{ detail?.preparationIngredient }}</td>    
          </tr>
          <tr>
           <th th colspan="12" style="text-align: left;"><i>PROPORTION TOTALE</i></th>
-          <td style="color:blue;">{{ totalProportion | number: '1.0-3' }} %</td>
+          <td style="color:blue;">{{ totalProportion * 100 | number: '1.0-3' }} %</td>
           <td>                  </td>
          </tr>
      </tbody>
