Correction Details plat, controle sur preparation,modification d'une course

--- a/src/app/pages/course/modalpurchase/modalpurchase.component.html
+++ b/src/app/pages/course/modalpurchase/modalpurchase.component.html
@@ -187,11 +187,11 @@
         </div> -->
       </div>
       <div class="ml-auto btnspart col-6 mt-3 center-button" style="margin-right: 560px;">
-        <button pButton label="Modifier mes courses" type="submit" [loading]="loading" 
+        <button pButton label="ENREGISTRER" type="submit" [loading]="loading" 
           class="p-button-orange mt-2 mb-2"
           [disabled]="!f.valid || detailPurchasesForms2.length==0"></button>
       
-        <button pButton type="button" (click)="confirm2($event)" label="Annuler" class="p-button-danger mt-2 mb-2"></button>
+        <button pButton type="button" (click)="confirm2($event)" label="ANNULER" class="p-button-danger mt-2 mb-2"></button>
       </div>
       
       
